test/bad/sec_param.subst
{"functions":[{"paramSecrecy":[false],"returnSecrecy":[],"trusted":false},{"paramSecrecy":[false],"returnSecrecy":[],"trusted":false}],"globalsOffset":80,"globalsSecrecy":[],"memories":[{"imported":true,"secret":false}],"memoriesOffset":36}
{"functions":[{"paramSecrecy":[true],"returnSecrecy":[],"trusted":false},{"paramSecrecy":[false],"returnSecrecy":[],"trusted":false}],"globalsOffset":80,"globalsSecrecy":[],"memories":[{"imported":true,"secret":false}],"memoriesOffset":36} 